--- a/templates/admin.html
+++ b/templates/admin.html
@@ -38,7 +38,7 @@ body {
           <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="/addmatch">AddMatch</a></li>
           <li><a href="#">Page 2</a></li>
         </ul>
@@ -76,12 +76,6 @@ body {
                         <img src="images/{{match.team_1}}.PNG" id="teamimage"/>
                         <div>
                           <p>{{match.team_1}}</p>
-                        </div>
-                      </div>
-                      <div class="col-md-4" style="padding-top: 30px">
-                        <button type="submit" class="btn btn-success" disabled>Add Squad</button>
-                        <div>
-                          <h6>{{match.date}}</h6>
                         </div>
                       </div>
                       <div class="col-md-4 text-center">
