--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -15,8 +15,8 @@
       <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
+      <li class="active"><a href="/">Home</a></li>
+      <li><a href="/addmatch">AddMatch</a></li>
       <li><a href="#">Page 2</a></li>
       <li><a href="#">Page 3</a></li>
     </ul>
@@ -24,7 +24,7 @@
 </nav>
 <div class="container-fluid">
   <div class="panel panel-default">
-    <div class="panel-heading">Panel Heading</div>
+    <div class="panel-heading">Panel Heading----{{totalteams}}</div>
     <div class="panel-body">
       <table class="table table-striped">
     <thead>
