--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="/addmatch">AddMatch</a></li>
       <li><a href="#">Page 2</a></li>
       <li><a href="#">Page 3</a></li>
