--- a/templates/matchpage.html
+++ b/templates/matchpage.html
@@ -43,8 +43,8 @@ body {
           <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Page 1</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/addmatch">AddMatch</a></li>
           <li><a href="#">Page 2</a></li>
           <li><a href="#">Page 3</a></li>
         </ul>
