--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -110,6 +110,15 @@
         <form action="/generateTeams" method="post">
           <input type="hidden" id="matchid" name="matchid" value="{{matchid}}">
           <div class="form-group">
+            <label>Combination</label>
+            <select class="form-control" name="combination" id="combination">
+              <option>ALL</option>
+              <option>1-3-3-4</option>
+              <option>1-4-3-3</option>
+              <option>2-3-3-3</option>
+            </select>
+          </div>
+          <div class="form-group">
             <div class="col-md-offset-5 col-md-10">
               <button type="submit" class="btn btn-success">Generate Teams</button>
             </div>
