--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -24,10 +24,16 @@
 </nav>
 <div class="container-fluid">
   <div class="panel panel-default">
-    <div class="panel-heading">Panel Heading----{{totalteams}}</div>
+    <div class="panel-heading" >
+      Panel Heading
+    </div>
     <div class="panel-body">
       <table class="table table-striped">
     <thead>
+      <tr>
+        <th>TotalTeams:{{totalteams}}</th>
+        <th>ThisCombination:{{thiscombinationlength}}</th>
+      <tr>
       <tr>
         <th>player1</th>
         <th>player2</th>
