--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -8,8 +8,26 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+<style type="text/css">
+body {
+    background-size:auto;
+    background-repeat: no-repeat;
+    background-color: rgb(88, 88, 88);
+}
+#anyClass {
+  height:500px;
+  overflow-y: scroll;
+}
+#b {border-style:solid;}
+#teamimage{
+  height:80%;
+  width:100%;
+  padding-top:10px;
+  padding-left:10px;
+  padding-right: 10px;
+}
+</style>
 <body>
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -74,8 +92,8 @@
   <div class="col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading">Selected Players</div>
-      <div class="panel-body">
-        <table class="table table-bordered">
+      <div class="panel-body" id="anyClass">
+        <table class="table table-striped">
           <thead>
             <tr>
               <th>Name</th>
@@ -110,17 +128,31 @@
         <form action="/generateTeams" method="post">
           <input type="hidden" id="matchid" name="matchid" value="{{matchid}}">
           <div class="form-group">
-            <label>Combination</label>
-            <select class="form-control" name="combination" id="combination">
-              <option>ALL</option>
-              <option>1-3-3-4</option>
-              <option>1-4-3-3</option>
-              <option>2-3-3-3</option>
-            </select>
-          </div>
-          <div class="form-group">
             <div class="col-md-offset-5 col-md-10">
-              <button type="submit" class="btn btn-success">Generate Teams</button>
+              <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Generate Teams</button>
+              <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <div class="form-group">
+                        <label>Combination</label>
+                        <select class="form-control" name="combination" id="combination">
+                          <option>ALL</option>
+                          <option>1-3-3-4</option>
+                          <option>1-4-3-3</option>
+                          <option>2-3-3-3</option>
+                          <option>1-4-2-4</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="submit" class="btn btn-success">Generate Teams</button>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
             </div>
           </div>
         </form>
