--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -36,7 +36,7 @@ body {
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="/addmatch">AddMatch</a></li>
-      <li><a href="#">Page 2</a></li>
+      <li><a href="/addsquad">AddSquad</a></li>
       <li><a href="#">Page 3</a></li>
     </ul>
   </div>
@@ -140,9 +140,22 @@ body {
                         <select class="form-control" name="combination" id="combination">
                           <option>ALL</option>
                           <option>1-3-3-4</option>
-                          <option>1-4-3-3</option>
                           <option>2-3-3-3</option>
+                          <option>3-3-2-3</option>
+                          <option>3-4-1-3</option>
+                          <option>1-4-3-3</option>
+                          <option>1-5-2-3</option>
                           <option>1-4-2-4</option>
+                          <option>2-4-1-4</option>
+                          <option>1-6-1-3</option>
+                          <option>2-4-2-3</option>
+                          <option>1-5-1-4</option>
+                          <option>2-5-1-3</option>
+                          <option>1-3-4-3</option>
+                          <option>1-3-1-6</option>
+                          <option>1-4-1-5</option>
+                          <option>1-3-2-5</option>
+                          <option>2-3-1-5</option>
                         </select>
                       </div>
                     </div>
@@ -150,7 +163,6 @@ body {
                       <button type="submit" class="btn btn-success">Generate Teams</button>
                     </div>
                   </div>
-                  
                 </div>
               </div>
             </div>
