--- a/templates/admin.html
+++ b/templates/admin.html
@@ -40,7 +40,8 @@ body {
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
           <li><a href="/addmatch">AddMatch</a></li>
-          <li><a href="#">Page 2</a></li>
+          <li><a href="/addsquad">AddSquad</a></li>
+          <li><a href="#">Page 3</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
