--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -17,7 +17,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="/addmatch">AddMatch</a></li>
-      <li><a href="#">Page 2</a></li>
+      <li><a href="/addsquad">AddSquad</a></li>
       <li><a href="#">Page 3</a></li>
     </ul>
   </div>
