--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -158,6 +158,14 @@ body {
                           <option>2-3-1-5</option>
                         </select>
                       </div>
+                      <div class="form-group">
+                        <label>Players Impact</label>
+                        <select class="form-control" name="playerimpact" id="playerimpact">
+                          <option>Average</option>
+                          <option>High</option>
+                          <option>Low</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="modal-footer">
                       <button type="submit" class="btn btn-success">Generate Teams</button>
