--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -32,8 +32,13 @@
     <thead>
       <tr>
         <th>TotalTeams:{{totalteams}}</th>
-        <th>ThisCombination:{{thiscombinationlength}}</th>
+      </tr>
       <tr>
+        <th>ThisCombination:{{thiscombinationlength}}</th>
+      </tr>
+      <tr>
+        <th>CurrentCombination:{{currentcombination}}</th>
+      </tr>
       <tr>
         <th>player1</th>
         <th>player2</th>
