Pitch Points Added

--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -177,6 +177,15 @@ body {
                           {% endfor %}
                         </select>
                       </div>
+                      <div class="form-group">
+                        <label>Pitch Type</label>
+                        <select class="form-control" name="pitchtype" id="pitchtype">
+                            <option>None</option>
+                            <option>BattingPitch</option>
+                            <option>BalancedPitch</option>
+                            <option>BowlingPitch</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="modal-footer">
                       <button type="submit" class="btn btn-success">Generate Teams</button>
