--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -37,7 +37,7 @@
         <th>ThisCombination:{{thiscombinationlength}}</th>
       </tr>
       <tr>
-        <th>CurrentCombination:{{currentcombination}}</th>
+        <th>InputCombi:{{currentcombination}}</th>
       </tr>
       <tr>
         <th>player1</th>
@@ -53,6 +53,7 @@
         <th>player11</th>
         <th>Total percentage</th>
         <th>Current points</th>
+        <th>Pitch Points</th>
       </tr>
     </thead>
     <tbody>
@@ -71,6 +72,7 @@
         <td>{{team[10].playername}}</td>
         <td>{{team[11]}}</td>
         <td>{{team[12]}}</td>
+        <td>{{team[13]}}</td>
       </tr>
       {% endfor %}
     </tbody>
