--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@ body {
           <li class="active"><a href="/">Home</a></li>
           <li><a href="/addmatch">AddMatch</a></li>
           <li><a href="/addsquad">AddSquad</a></li>
-          <li><a href="#">Page 3</a></li>
+          <li><a href="/adddreamteam">AddDreamTeam</a></li>
         </ul>
       </div>
   </nav>
