--- a/templates/adddreamteam.html
+++ b/templates/adddreamteam.html
@@ -51,6 +51,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -62,6 +64,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -78,6 +82,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -89,6 +95,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -105,6 +113,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -116,6 +126,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -132,6 +144,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -143,6 +157,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -159,6 +175,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -170,6 +188,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -186,6 +206,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -197,6 +219,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -213,6 +237,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -224,6 +250,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -240,6 +268,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -251,6 +281,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -267,6 +299,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -278,6 +312,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -294,6 +330,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -305,6 +343,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
@@ -321,6 +361,8 @@
                 <option>A1D</option>
                 <option>A2D</option>
                 <option>AF</option>
+                <option>AF2</option>
+                <option>AAR</option>
                 <option>APS</option>
                 <option>AOBO1</option>
                 <option>AOBO2</option>
@@ -332,6 +374,8 @@
                 <option>B1D</option>
                 <option>B2D</option>
                 <option>BF</option>
+                <option>BF2</option>
+                <option>BAR</option>
                 <option>BPS</option>
                 <option>BOBO1</option>
                 <option>BOBO2</option>
