--- a/templates/finalteams.html
+++ b/templates/finalteams.html
@@ -51,6 +51,9 @@
         <th>player9</th>
         <th>player10</th>
         <th>player11</th>
+        <th>captain</th>
+        <th>VC</th>
+        <th>Total %</th>
       </tr>
     </thead>
     <tbody>
@@ -67,6 +70,9 @@
         <td>{{team[8].playername}}</td>
         <td>{{team[9].playername}}</td>
         <td>{{team[10].playername}}</td>
+        <td>{{team[11].playername}}</td>
+        <td>{{team[12].playername}}</td>
+        <td>{{team[13]}}</td>
       </tr>
       {% endfor %}
     </tbody>
